# picobuild

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: github-actions-tag.yml
example/picolibsdk/: Makefile  c.sh  d.sh
example/picosdk/: CMakeLists.txt
example/picosdk/src/: main.c
